Fix tooltips (#15) Tooltips now have a max height Bigger tooltips when hovering the first columns Show tooltips over the first column when hovering the second column Avoid intercepting pointer events on tooltips Fix tooltips getting stuck when leaving a row

--- a/css/mymangadex.css
+++ b/css/mymangadex.css
@@ -10,6 +10,7 @@
     transition: opacity .2s ease-in;
     color: #fff;
     z-index: 9999;
+    pointer-events: none
 }
 .mmd-tooltip.loading {
     font-size: 1rem;
@@ -20,7 +21,6 @@
 }
 .mmd-tooltip .mmd-thumbnail {
     max-width: 100%;
-    user-select: none;
     display: block;
 }
 .mmd-tooltip .mmd-thumbnail.loading {
